--- a/codigo/public/style/style.css
+++ b/codigo/public/style/style.css
@@ -1372,7 +1372,6 @@ label.error {
   position: absolute;
   top: 70%;
   max-width: 40px;
-  left: 7%;
 }
 
 #deslogarperfil {
@@ -1535,4 +1534,47 @@ label.error {
 
 .Excluiretabela:hover {
   color: #7e624b;
+}
+
+/* pesquisar receitas */
+
+.bodypesquisarreceitas {
+  background-color: #f1f4d9;
+}
+
+.titulopesquisardiv {
+  text-align: center;
+  position: absolute;
+  color: #5f432c;
+  font-family: "camiro";
+  font-size: 250%;
+  z-index: 1;
+  left: 45%;
+  top: 5%;
+  font-weight: 500;
+}
+.titulopesquisar {
+}
+.pesquisarreceitasbotao {
+  position: absolute;
+  left: 40%;
+  top: 70%;
+  border: none;
+  border-radius: 20px;
+  background-color: #342420;
+  color: #f1f4d9;
+  width: 10%;
+  height: 5%;
+  transition: 0.4s ease-in-out;
+  font-family: "vocago";
+  font-size: 185%;
+}
+
+.pesquisarreceitasbotao:hover {
+  width: 33%;
+  height: 13%;
+  left: 38.5%;
+  top: 68.5%;
+  background: linear-gradient(to bottom, #342420, #654a32);
+  font-size: 190%;
 }
