--- a/codigo/public/style/style.css
+++ b/codigo/public/style/style.css
@@ -1557,24 +1557,37 @@ label.error {
 }
 .pesquisarreceitasbotao {
   position: absolute;
-  left: 40%;
-  top: 70%;
+  left: 50%;
+  top: 20%;
   border: none;
   border-radius: 20px;
   background-color: #342420;
   color: #f1f4d9;
-  width: 10%;
+  width: 7%;
   height: 5%;
   transition: 0.4s ease-in-out;
   font-family: "vocago";
-  font-size: 185%;
+  font-size: 100%;
 }
 
 .pesquisarreceitasbotao:hover {
-  width: 33%;
-  height: 13%;
-  left: 38.5%;
-  top: 68.5%;
+  width: 7.5%;
+  height: 5.5%;
+  left: 50.5%;
+  top: 20.5%;
   background: linear-gradient(to bottom, #342420, #654a32);
-  font-size: 190%;
+  font-size: 110%;
 }
+
+.inputpesquisarreceitas {
+  font-family: "otez";
+  font-size: 110%;
+  border: none;
+  border-bottom: 0.2vw solid #5f432c;
+  background-color: transparent;
+  position: absolute;
+  top: 21%;
+  left: 35%;
+}
+
+
