--- a/codigo/public/style/style.css
+++ b/codigo/public/style/style.css
@@ -1600,3 +1600,9 @@ label.error {
 .tabela-personalizada {
   background-color: transparent;
 }
+
+/* Listar comentario --------------------------------------------------------------------------------------------------------------------------------------------------------------------------- */
+
+.bodyListarComentário {
+  background-color: #f1f4d9;
+}
