--- a/codigo/public/style/style.css
+++ b/codigo/public/style/style.css
@@ -1333,7 +1333,7 @@ label.error {
   text-align: center;
   position: absolute;
   top: 25%;
-  left: 8%;
+  left: 87%;
 }
 
 .brasilperfil {
@@ -1510,6 +1510,10 @@ label.error {
 
 .addreceitalink:hover{
   color: #654a32;
+}
+.listartudo{
+  position: absolute;
+  left: 12%;
 }
 
 .addreceita {
